--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,10 @@ form div{
   background-color:#a36a36;
 }
 
+form button{
+  margin:0.5em;
+}
+
 button{
   background-color: #a36a36;
   border-radius: 0.7em;
