--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,25 @@ body {
     font-family: "Century", "Georgia", serif;
 }
 
+main{
+  background-color:#d89f6a;
+  padding:1em;
+  width:40em;
+}
+
+aside{
+  margin:2em;
+  border-left:1em black solid;
+  padding-left:5em;
+}
+
+#content{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+
+}
+
 main form{
   border: 0.2em solid black;
   display:flex;
@@ -100,7 +119,9 @@ header button {
   order: 4;
   /*  left: 29em; */
 }
-
+#loginButton{
+  order:6;
+}
 #searchButton {
   background-color: #a36a36;
   border-radius: 0.7em;
@@ -201,4 +222,10 @@ nav a {
   background-color: #a36a36;
 }
 
+h2{
+  font-size:8em;
+}
+h3{
+  font-size:3em;
+}
 footer {}
