--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@
 h1,
 h2,
 h3,
-p, nav {
+p,
+nav {
   font-family: "Century", "Georgia", serif;
 }
 
@@ -11,34 +12,33 @@ body {
   background-color: #49220b;
   font-family: "Century", "Georgia", serif;
 }
-main{
-  background-color:#d89f6a;
-  padding:1em;
-  margin:1em;
-  margin-left:20em;
-  width:40em;
+main {
+  background-color: #d89f6a;
+  padding: 1em;
+  margin: 1em;
+  margin-left: 20em;
+  width: 40em;
 }
 
-#content main{
-  background-color:#d89f6a;
-  padding:1em;
-  width:40em;
+#content main {
+  background-color: #d89f6a;
+  padding: 1em;
+  width: 40em;
 }
 
-aside{
-  margin:2em;
-  border-left:1em black solid;
-  padding-left:5em;
+aside {
+  margin: 2em;
+  border-left: 1em black solid;
+  padding-left: 5em;
 }
 
-#content{
-  display:flex;
-  justify-content:center;
-  align-items:center;
-
+#content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-main form{
+main form {
   border: 0.2em solid black;
   display: flex;
   margin: 5em;
@@ -132,8 +132,8 @@ header a {
   order: 4;
   /*  left: 29em; */
 }
-#loginButton{
-  order:6;
+#loginButton {
+  order: 6;
 }
 #searchButton {
   background-color: #a36a36;
@@ -165,7 +165,7 @@ header form {
   flex-direction: row-reverse;
   font-size: 1.3em;
   justify-content: flex-start;
-  margin:1em;
+  margin: 1em;
 }
 
 #bodyDiv p {
@@ -183,6 +183,7 @@ select {
 #shelfDiv {
   padding-top: 5em;
   height: 40em;
+  width: 50%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -263,7 +264,7 @@ nav a {
   justify-content: space-around;
 }
 
-#addBookDisplayBox input[type=submit] {
+#addBookDisplayBox input[type="submit"] {
   background-color: #d89f6a;
   border-radius: 0.7em;
   border-color: #49220b;
@@ -294,7 +295,7 @@ nav a {
   font-size: 1em;
 }
 
-#addBookDisplayBox input[type=text] {
+#addBookDisplayBox input[type="text"] {
   background-color: #d89f6a;
   color: black;
 }
@@ -394,10 +395,11 @@ nav a {
   background-color: #a36a36;
 }
 
-h2{
-  font-size:8em;
+h2 {
+  font-size: 8em;
 }
-h3{
-  font-size:3em;
+h3 {
+  font-size: 3em;
 }
-footer {}
+footer {
+}
