--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ main form {
 form div {
   padding: 1em;
   margin: 1em;
-  width: 10em;
+  min-width: 10em;
   font-size: 1em;
   border: 0.2em solid black;
   justify-content: center;
@@ -69,10 +69,22 @@ button {
   border-radius: 0.7em;
   border-color: #49220b;
   border-width: 0.07em;
-  width: 4.5em;
-  height: 2em;
+min-width: 4.5em;
+  min-height: 2em;
   font-size: 2em;
   font-family: "Century", "Georgia", serif;
+}
+
+input{
+  background-color: #a36a36;
+  border-radius: 0.7em;
+  border-color: #49220b;
+  border-width: 0.07em;
+min-width: 4.5em;
+  min-height: 2em;
+  font-size: 2em;
+  font-family: "Century", "Georgia", serif;
+  margin:0.5em;
 }
 
 #forgotpassword {
@@ -140,8 +152,8 @@ header a {
   border-radius: 0.7em;
   border-color: #49220b;
   border-width: 0.07em;
-  height: 2em;
-  width: 4em;
+min-height: 2em;
+min-width: 4em;
   font-size: 1.5em;
   text-align: center;
   font-family: "Century", "Georgia", serif;
@@ -400,4 +412,13 @@ h3 {
   font-size: 3em;
 }
 footer {
+}
+
+span{
+  border: 1em solid black;
+  background-color:white;
+  margin:1em;
+  padding:1em;
+  color:orange;
+  font-weight:bold;
 }
