--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,8 @@ button {
   border-radius: 0.7em;
   border-color: #49220b;
   border-width: 0.07em;
-  width: 4.5em;
+  min-width:5em;
+  padding:0.2em;
   height: 2em;
   font-size: 2em;
   font-family: "Century", "Georgia", serif;
@@ -114,13 +115,16 @@ header a {
   border-color: #49220b;
   border-style: solid;
   border-width: 0.07em;
-  width: 4.5em;
+  width: auto;
+  min-width:4.5em;
   height: 2em;
   font-size: 2em;
   text-decoration: none;
   text-align: center;
   color: black;
   padding-top: 0.3em;
+  padding-left:0.3em;
+  padding-right:0.3em;
   font-family: "Century", "Georgia", serif;
 }
 
