--- a/css/style.css
+++ b/css/style.css
@@ -69,11 +69,20 @@ button {
   border-radius: 0.7em;
   border-color: #49220b;
   border-width: 0.07em;
-  min-width:5em;
-  padding:0.2em;
+  min-width: 5em;
+  padding: 0.2em;
   height: 2em;
   font-size: 2em;
   font-family: "Century", "Georgia", serif;
+}
+
+.coverButton {
+  border-radius: 0em;
+  border: none;
+  padding: 0em;
+  margin: 0em;
+  height: 240px;
+  width: 140px;
 }
 
 #forgotpassword {
@@ -84,10 +93,10 @@ button {
   margin: 1em;
 }
 
-input#remember{
-  align-self:flex-end;
-  width:1em;
-  height:1em;
+input#remember {
+  align-self: flex-end;
+  width: 1em;
+  height: 1em;
 }
 header {
   background-color: #d89f6a;
@@ -116,15 +125,15 @@ header a {
   border-style: solid;
   border-width: 0.07em;
   width: auto;
-  min-width:4.5em;
+  min-width: 4.5em;
   height: 2em;
   font-size: 2em;
   text-decoration: none;
   text-align: center;
   color: black;
   padding-top: 0.3em;
-  padding-left:0.3em;
-  padding-right:0.3em;
+  padding-left: 0.3em;
+  padding-right: 0.3em;
   font-family: "Century", "Georgia", serif;
 }
 
@@ -200,8 +209,6 @@ select {
 }
 
 .shelfOuter {
-  /*position: relative;
-  top: 10em; */
   background-color: #a36a36;
   border-style: solid;
   border-radius: 0.5em;
