Implemented page bookshelf page turning, filenames for books being added are now urlencoded

--- a/css/password_strength.css
+++ b/css/password_strength.css
@@ -5,8 +5,8 @@
 }
 
 .strength_input{
-    max-width: 10em;
-    font-size: 1em;
+    width: 250px;
+    font-size: 25px;
     background: transparent;
 }
 
@@ -22,7 +22,7 @@
 .button_strength {
     text-decoration: none;
     color: #4d4d4d;
-    font-size: 1em;
+    font-size: 13px;
     display: block;
 }
 
@@ -40,7 +40,7 @@
     position: absolute;
     right: 10px;
     color: #4d4d4d;
-    font-size: 1em;
+    font-size: 13px;
     padding-right: 30px;
 }
 
@@ -64,10 +64,10 @@
 /* Styles for verification */
 .pswd_info {
 	position:absolute;
-	width: inherit;
-	padding:inherit;
+	width: 220px;
+	padding:15px;
 	background:#fefefe;
-	font-size:1em;
+	font-size:20px;
 	border-radius:15px;
 	box-shadow:0 1px 3px #ccc;
 	border:1px solid #ddd;
@@ -124,7 +124,7 @@
 }
 
 .pswd_info .invalid {
-	background:url(*/images/invalid.png) no-repeat 0 50%;
+	background:url(images/invalid.png) no-repeat 0 50%;
 	color:#ec3f41;
 }
 .pswd_info .valid {
