Added comments to my part, added some overall javascript/jquery for validation, and a couple other things

--- a/css/password_strength.css
+++ b/css/password_strength.css
@@ -124,10 +124,10 @@
 }
 
 .pswd_info .invalid {
-	background:url(images/invalid.png) no-repeat 0 50%;
+	background:url(../images/invalid.png) no-repeat 0 50%;
 	color:#ec3f41;
 }
 .pswd_info .valid {
-	background:url(images/valid.png) no-repeat 0 50%;
+	background:url(../images/valid.png) no-repeat 0 50%;
 	color:#3a7d34;
 }
