Fixed bug on account page

--- a/css/password_strength.css
+++ b/css/password_strength.css
@@ -1,3 +1,13 @@
+/*
+  Name: password_strength.css
+  Taken From: Maxim Kuryan
+  Link to Github:https://github.com/mkurayan/password_strength
+
+  Used on: register.php
+
+  Description: Styles a textfield that allows a user to input a password
+*/
+
 .strength_wrapper {
     display: inline-block;
     position: relative;
