Committed the change so edit book isn't awk

--- a/css/password_strength.css
+++ b/css/password_strength.css
@@ -5,7 +5,8 @@
 
   Used on: register.php
 
-  Description: Styles a textfield that allows a user to input a password
+  Description: Styles a textfield that allows a user to input a password and then
+  shows a visual rating of the password strength
 */
 
 .strength_wrapper {
