--- a/css/splitchar.css
+++ b/css/splitchar.css
@@ -1,3 +1,14 @@
+/**
+ * Splitchar.css (originally)
+ * @author emisfera - Razvan B.
+ Email: balosinrazvan@yahoo.com
+GitHub: https://github.com/razvanbalosin
+Work: FrontEnd Developer
+https://github.com/razvanbalosin/Splitchar.js
+
+Description on BCW Books: styles the BCW Books title on the homepage to be half grey, half black.
+ */
+
 .horizontal {
     position:relative;
     display:inline-block;
