--- a/css/style.css
+++ b/css/style.css
@@ -319,8 +319,7 @@ nav a {
   justify-content: space-around;
   height: 55em;
   width: 42%;
-  /*background-color: #d89f6a;*/
-  background-color: #49220b;
+  background-color: #d89f6a;
   margin: auto;
 }
 
