added some comments

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,12 @@
+
+/*
+Name: style.css
+Programmer Name: Alan-Michael Bradshaw and Evan Campbell-Weiner
+
+Description: used in the BCWBooks web application on all pages. 
 @charset "UTF-8";
 
-/*font styling for header, paragraph and nav elements*/
+font styling for header, paragraph and nav elements*/
 h1,
 h2,
 h3,
